@@ -1,3 +1,7 @@
+Release ...
+* vi no longer dies with a segmentation fault if a line does not fit on the
+  screen after an insertion.
+
 Release 2/25/05
 * Traditional regular expressions can now be used with multibyte characters.
 * When the 'ignorecase' option is toggled, saved regular expressions are now
